@@ -44,13 +44,13 @@ usemetadata=yes
 ## This option will not capture song length or track number
 usefilepath=no
 
-## Format of the path HARP will use.
+## Format of the path HARP will use. First matching format wins.
 ## %r=artist, %a=album, %t=title, %y=year, %k=track
-## Example format for the /home/user/music directory:
-#format=/home/user/music/%r/%y-%a/%k-%t
+## Example format for Music directories:
+#format=.*/Music/%r/%y-%a/%k-%t\.([a-z0-9]{3}|flac)
 
-## Default format. This should be last in the format list.
-#format=*/%r/%a/%t
+## Default format which should match anything else. This should be last in the format list.
+#format=.*/%r/%a/%t
 
 
 ##############################
