@@ -9,6 +9,7 @@ Changes in HARP-0.6.0:
 - Allowing resampling for JACK.
 - Partial 24 bit audio support.
 - Allowing unicode names.
+- Using POSIX regex for filepath-insert pattern matching.
 
 Changes in HARP-0.5.3:
 - Changed shuffle function to avoid predictable results.
